[package]
name = "task_terminal_program"
version = "0.1.0"
authors = ["jlcruz2318@gmail.com <jlcruz2318@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = "1.0.117"
serde_derive="1.0"
tui = "0.12"
termion = "1.5"