[package]
name = "task_terminal_program"
version = "0.1.0"
authors = ["jlcruz2318@gmail.com <jlcruz2318@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
cursive = "0.16"
serde = { version = "1", features = ["derive"] }